crates/forge_domain/src/snapshots/forge_domain__context__tests__update_image_tool_calls_tool_results_no_images.snap
---
source: crates/forge_domain/src/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
      tool_calls: ~
      model: ~
  - tool:
      name: text_tool
      call_id: call1
      output:
        values:
          - text: Text output
        is_error: false
  - tool:
      name: empty_tool
      call_id: call2
      output:
        values:
          - empty
        is_error: false
